--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/TatcaDon.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/TatcaDon.html
@@ -407,7 +407,7 @@
                 <div class="button-group-a">
                     <!--XEM CHI TIẾT HÓA ĐƠN-->
                     <div class="btn-group">
-                        <a th:href="@{'/ChiTietHoaDon/TatCaDon' + ${hoaDon.id}}" class="btn btn-warning btn-sm"
+                        <a th:href="@{'/ChiTietHoaDon/TatCaDon/hoa-don-id=' + ${hoaDon.id}}" class="btn btn-warning btn-sm"
                            type="submit">
                             <i class="fas fa-info-circle"></i>
                         </a>
