--- a/src/main/resources/templates/admin/hoadon/ChiTiethoaDon/CTChoGiaohang.html
+++ b/src/main/resources/templates/admin/hoadon/ChiTiethoaDon/CTChoGiaohang.html
@@ -38,10 +38,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <style>
-        .fas.fa-history:before {
-            content: "\f1da"; /* Mã Unicode tương ứng với biểu tượng "fa-history" */
+        .button-group {
+            display: flex;
         }
 
+        .action-button {
+            flex: 0 0 100px; /* Đặt kích thước nút */
+            max-width: 100px; /* Đặt kích thước tối đa */
+            margin-right: 5px; /* Khoảng cách giữa các nút */
+        }
+
+        .action-button:last-child {
+            margin-right: 0; /* Loại bỏ margin phải của nút cuối cùng */
+        }
         #modalChiTiet .modal-dialog {
             max-width: 1400px;
             width: 1400px;
@@ -49,13 +58,6 @@
 
         #modalChiTiet .modal-content {
             height: 450px;
-        }
-
-        .pagination {
-            list-style-type: none;
-            display: flex;
-            justify-content: center;
-            align-items: center;
         }
 
         .pagination li {
@@ -81,10 +83,6 @@
             cursor: default;
         }
 
-        .pagination-empty {
-            display: none;
-        }
-
         .action-button {
             padding: 5px 10px;
             font-size: 14px;
@@ -103,44 +101,14 @@
             outline: none;
         }
 
-        .XacNhanDon {
-            padding: 5px 10px;
-            font-size: 14px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .alert-warning {
-            margin-top: 1rem;
-        }
-
         .modal-title {
             text-align: center;
             margin-left: 160px;
             color: #1ab7ea;
         }
 
-        .tab-pane {
-            display: none;
-            /* Ẩn tất cả các bảng */
-        }
-
-        .tab-pane.show {
-            display: block;
-            /* Hiển thị bảng tương ứng với tab hiện tại */
-        }
-
         body {
             margin-top: 20px;
-        }
-
-        .timeline-steps {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap
         }
 
         .timeline-steps .timeline-step {
@@ -240,11 +208,6 @@
             color: #fff;
         }
 
-        .hduong1 {
-            display: flex;
-            gap: 5px;
-        }
-
         .hduong1 button {
             flex: 1;
             height: 40px;
@@ -269,57 +232,6 @@
 
         .modal-header .close {
             display: none;
-        }
-
-        .hduong {
-            display: flex;
-            gap: 5px;
-            float: left;
-            padding: 5px;
-        }
-
-        .custom-input {
-            width: 400px;
-            height: 40px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            padding: 10px;
-            font-size: 16px;
-        }
-
-        .custom-input:focus {
-            outline: none;
-            border-color: #4c9aff;
-            box-shadow: 0 0 5px rgba(76, 154, 255, 0.5);
-        }
-
-        .hduong1 {
-            display: flex;
-            gap: 5px;
-            float: right;
-        }
-
-        .b1 {
-            width: 150px;
-            height: 40px;
-            font-size: 16px;
-            border-radius: 5px;
-            border: none;
-            background-color: #4c9aff;
-            color: #fff;
-            cursor: pointer;
-        }
-
-        .b1:hover {
-            background-color: #357ae8;
-        }
-
-        .btnTimKiem {
-            background-color: #4c9aff;
-        }
-
-        .btnTimKiem:hover {
-            background-color: #357ae8;
         }
 
         .table {
@@ -383,55 +295,6 @@
             display: none;
         }
 
-        .tab-buttons {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-top: 20px;
-        }
-
-        .tab-button {
-            flex: 1;
-            position: relative;
-            padding: 10px 0;
-            color: #333;
-            font-weight: bold;
-            background-color: transparent;
-            border: none;
-            border-radius: 30px;
-            transition: background-color 0.3s;
-            outline: none;
-            text-align: center;
-            cursor: pointer;
-        }
-
-        .tab-button.active {
-            background-color: #4c9aff;
-            color: #fff;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-        }
-
-        .tab-button:hover {
-            background-color: #f2f2f2;
-            color: #333;
-        }
-
-        .tab-button.active:before {
-            content: "";
-            position: absolute;
-            top: 50%;
-            left: 0;
-            transform: translateY(-50%);
-            width: 8px;
-            height: 8px;
-            background-color: #fff;
-            border-radius: 50%;
-        }
-
-        .tab-button:not(.active):before {
-            content: none;
-        }
-
         h1 {
             text-align: center;
             font-size: 32px;
@@ -455,12 +318,6 @@
             bottom: -5px;
             left: 50%;
             transform: translateX(-50%);
-        }
-
-        .timeline-steps {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap
         }
 
         .timeline-steps .timeline-step {
