--- a/src/main/resources/templates/admin/hoadon/ChiTiethoaDon/CTTatCaDon.html
+++ b/src/main/resources/templates/admin/hoadon/ChiTiethoaDon/CTTatCaDon.html
@@ -46,6 +46,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <style>
+        .button-group {
+            display: flex;
+        }
+
+        .action-button {
+            max-width: 100px;
+            color: white;
+        }
         .fas.fa-history:before {
             content: "\f1da"; /* Mã Unicode tương ứng với biểu tượng "fa-history" */
         }
