--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DaHuy.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DaHuy.html
@@ -540,7 +540,7 @@
             <td>
                 <div class="button-group-a">
                     <div class="btn-group">
-                        <a th:href="@{'/ChiTietHoaDon/DaHuy' + ${hoaDon.id}}" class="btn btn-warning btn-sm" type="submit">
+                        <a th:href="@{'/ChiTietHoaDon/DaHuy/hoa-don-id=' + ${hoaDon.id}}" class="btn btn-warning btn-sm" type="submit">
                             <i class="fas fa-info-circle"></i>
                         </a>
                     </div>
