dong bo giao dien

--- a/src/main/resources/templates/admin/NguoiDung/list/NguoiDung.html
+++ b/src/main/resources/templates/admin/NguoiDung/list/NguoiDung.html
@@ -361,7 +361,7 @@
             <!-- From thêm -->
             <div class="mb-3">
                 <a href="/NguoiDung/themMoi" class="btn btn-primary">
-                    THÊM
+                    <i class="fa fa-plus-circle bigger-110 purple"></i>
                 </a>
             </div>
 
