--- a/src/main/resources/templates/admin/voucher/edit.html
+++ b/src/main/resources/templates/admin/voucher/edit.html
@@ -42,8 +42,7 @@
                 </div>
                 <label class="col-sm-3 col-form-label text-end" for="giaTriToiThieu">Giá trị tối thiểu:</label>
                 <div class="col-sm-3">
-                    <input type="number" class="form-control" id="giaTriToiThieu" th:field="*{giaTriToiThieu}"
-                    />
+                    <input type="number" class="form-control" id="giaTriToiThieu" th:field="*{giaTriToiThieu}"/>
                     <p th:if="${#fields.hasErrors('giaTriToiThieu')}" th:errorclass="error" th:errors="*{giaTriToiThieu}"></p>
                 </div>
             </div>
