--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/TatcaDon.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/TatcaDon.html
@@ -4,344 +4,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!-- Custom fonts for this template-->
-    <link th:href="@{/admin/css/all.min.css}" rel="stylesheet" type="text/css">
-    <link th:href="@{/admin/css/fonts-googleapis.css}">
-
-    <!-- Custom styles for this template-->
-    <link th:href="@{/admin/css/sb-admin-2.min.css}" rel="stylesheet">
-    <link th:href="@{/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
-    <script th:src="@{/admin/js/jquery.min.js}"></script>
-    <script th:src="@{/admin/js/bootstrap.bundle.min.js}"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script th:src="@{/admin/js/jquery.easing.min.js}"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script th:src="@{/admin/js/sb-admin-2.min.js}"></script>
-
-    <script th:src="@{/admin/vendor/datatables/jquery.dataTables.min.js}"></script>
-    <script th:src="@{/admin/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
-
-    <!-- Page level custom scripts -->
-    <script th:src="@{/admin/js/demo/datatables-demo.js}"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <!-- Bao gồm thư viện jQuery UI -->
-    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
-
-    <!-- CSS của jQuery UI (nếu cần) -->
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
-    <!-- Thư viện SweetAlert2 -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
-    <style>
-        .fas.fa-history:before {
-            content: "\f1da"; /* Mã Unicode tương ứng với biểu tượng "fa-history" */
-        }
-
-        #modalChiTiet .modal-dialog {
-            max-width: 1400px;
-            width: 1400px;
-        }
-
-        #modalChiTiet .modal-content {
-            height: 450px;
-        }
-
-        .pagination {
-            list-style-type: none;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .pagination li {
-            margin: 0 5px;
-        }
-
-        .pagination li a {
-            display: inline-block;
-            padding: 5px 10px;
-            text-decoration: none;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-            background-color: #f2f2f2;
-            color: #333;
-        }
-
-        .pagination li a:hover {
-            background-color: #e0e0e0;
-        }
-
-        .pagination .active a {
-            background-color: #ccc;
-            cursor: default;
-        }
-
-        .pagination-empty {
-            display: none;
-        }
-
-        h1 {
-            font-size: 24px;
-            font-weight: bold;
-            color: #333;
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .alert-warning {
-            margin-top: 1rem;
-        }
-
-        .modal-title {
-            text-align: center;
-            margin-left: 160px;
-            color: #1ab7ea;
-        }
-
-        body {
-            margin-top: 20px;
-        }
-
-        .timeline-steps .timeline-step {
-            align-items: center;
-            display: flex;
-            flex-direction: column;
-            position: relative;
-            margin: 1rem
-        }
-
-        @media (min-width: 768px) {
-            .timeline-steps .timeline-step:not(:last-child):after {
-                content: "";
-                display: block;
-                border-top: .25rem dotted #3b82f6;
-                width: 3.46rem;
-                position: absolute;
-                left: 7.5rem;
-                top: .3125rem
-            }
-
-            .timeline-steps .timeline-step:not(:first-child):before {
-                content: "";
-                display: block;
-                border-top: .25rem dotted #3b82f6;
-                width: 3.8125rem;
-                position: absolute;
-                right: 7.5rem;
-                top: .3125rem
-            }
-        }
-
-        .timeline-steps .timeline-content {
-            width: 10rem;
-            text-align: center
-        }
-
-        .timeline-steps .timeline-content .inner-circle {
-            border-radius: 1.5rem;
-            height: 1rem;
-            width: 1rem;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #3b82f6
-        }
-
-        .timeline-steps .timeline-content .inner-circle:before {
-            content: "";
-            background-color: #3b82f6;
-            display: inline-block;
-            height: 3rem;
-            width: 3rem;
-            min-width: 3rem;
-            border-radius: 6.25rem;
-            opacity: .5
-        }
-
-        .button-group button {
-            flex: 1;
-            height: 30px;
-            padding: 5px;
-            font-size: 14px;
-            border-radius: 5px;
-            width: 15px;
-            background-color: #4c9aff;
-            border: 1px solid #ccc;
-            cursor: pointer;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        .button-group-a button:hover {
-            background-color: #357ae8;
-            color: #fff;
-        }
-
-        .button-group-a button {
-            flex: 1;
-            height: 30px;
-            width: 50px;
-            padding: 2px 8px;
-            font-size: 12px;
-            border-radius: 5px;
-            background-color: #4c9aff;
-            border: 1px solid #ccc;
-            cursor: pointer;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        .button-group-a button:hover {
-            background-color: #357ae8;
-            color: #fff;
-        }
-
-        .hduong1 button {
-            flex: 1;
-            height: 40px;
-            padding: 5px;
-            font-size: 14px;
-            border-radius: 5px;
-            width: 150px;
-            background-color: #4c9aff;
-            border: 1px solid #ccc;
-            cursor: pointer;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        .hduong1 button:hover {
-            background-color: #357ae8;
-            color: #fff;
-        }
-
-        .modal-header .btn-close {
-            display: none;
-        }
-
-        .modal-header .close {
-            display: none;
-        }
-
-        .table th,
-        .table td {
-            padding: 12px 15px;
-            text-align: left;
-            border-bottom: 1px solid #e0e0e0;
-        }
-
-        .tab-buttons {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-top: 20px;
-        }
-
-        .tab-button {
-            flex: 1;
-            position: relative;
-            padding: 10px 0;
-            color: #333;
-            font-weight: bold;
-            background-color: transparent;
-            border: none;
-            border-radius: 30px;
-            transition: background-color 0.3s;
-            outline: none;
-            text-align: center;
-            cursor: pointer;
-        }
-
-        .tab-button.active {
-            background-color: #4c9aff;
-            color: #fff;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-        }
-
-        .tab-button:hover {
-            background-color: #f2f2f2;
-            color: #333;
-        }
-
-        .tab-button.active:before {
-            content: "";
-            position: absolute;
-            top: 50%;
-            left: 0;
-            transform: translateY(-50%);
-            width: 8px;
-            height: 8px;
-            background-color: #fff;
-            border-radius: 50%;
-        }
-
-        .tab-button:not(.active):before {
-            content: none;
-        }
-
-        h1 {
-            text-align: center;
-            font-size: 32px;
-            font-weight: bold;
-            color: #4c9aff;
-            margin-top: 20px;
-            padding-bottom: 10px;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            border: none;
-        }
-
-        h1:before {
-            content: "";
-            display: block;
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            background-color: #4c9aff;
-            position: absolute;
-            bottom: -5px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-    </style>
-
-    <script th:inline="javascript">
-        function redirectToTatCaDon() {
-            window.location.href = "/admin/DonHang/TatCaDon";
-        }
-
-        function redirectToChoxacNhan() {
-            window.location.href = "/admin/DonHang/ChoXacNhanDonHang";
-        }
-
-        function redirectToChoGiaoHang() {
-            window.location.href = "/admin/DonHang/ChoGiaoHang";
-        }
-
-        function redirectToDangGiao() {
-            window.location.href = "/admin/DonHang/DangGiaoHang";
-        }
-
-        function redirectToDaGiao() {
-            window.location.href = "/admin/DonHang/DaGiaoHang";
-        }
-
-        function redirectToDahuy() {
-            window.location.href = "/admin/DonHang/DaHuyHang";
-        }
-    </script>
-
+    <link rel="stylesheet" th:href="@{/admin/css/hoaDon/TrangThaiHoaDon/tatCaDon.css}">
+    <script th:src="@{/admin/js/hoadon/TrangThaiHoaDon/tatCaDon.js}"></script>
 </head>
 
 <body>
@@ -364,7 +28,7 @@
         </div>
 
         <input type="date" class="form-control" id="search-input-date-allHD">
-        <button class="btn btn-primary" type="button" onclick="searchByCreationDate()">
+        <button class="btn btn-primary" type="button" onclick="searchByCreationDateTatCaDon()">
             <i class="fas fa-search"></i>
         </button>
 
@@ -407,7 +71,8 @@
                 <div class="button-group-a">
                     <!--XEM CHI TIẾT HÓA ĐƠN-->
                     <div class="btn-group">
-                        <a th:href="@{'/ChiTietHoaDon/TatCaDon/hoa-don-id=' + ${hoaDon.id}}" class="btn btn-warning btn-sm"
+                        <a th:href="@{'/ChiTietHoaDon/TatCaDon/hoa-don-id=' + ${hoaDon.id}}"
+                           class="btn btn-warning btn-sm"
                            type="submit">
                             <i class="fas fa-info-circle"></i>
                         </a>
@@ -433,109 +98,6 @@
 
 </html>
 
-<!--TÌM KIẾM TẤT CẢ ĐƠN-->
-<script th:inline="javascript">
-    function searchAllFields() {
-        var input = document.getElementById("search-input-allFields").value.trim().toLowerCase();
-        var table = document.getElementById("user-table-allHD");
-        var rows = table.getElementsByTagName("tr");
-
-        var found = false; // Biến kiểm tra xem đã tìm thấy kết quả hay chưa
-
-        for (var i = 0; i < rows.length; i++) {
-            var orderIdCell = rows[i].getElementsByTagName("th")[0];
-            var customerNameCell = rows[i].getElementsByTagName("td")[1];
-            var phoneNumberCell = rows[i].getElementsByTagName("td")[2];
-            var totalPriceCell = rows[i].getElementsByTagName("td")[4];
-            var noteCell = rows[i].getElementsByTagName("td")[5];
-
-            if (orderIdCell && customerNameCell && phoneNumberCell && totalPriceCell && noteCell) {
-                var orderId = orderIdCell.textContent.trim().toLowerCase();
-                var customerName = customerNameCell.textContent.trim().toLowerCase();
-                var phoneNumber = phoneNumberCell.textContent.trim().toLowerCase();
-                var totalPrice = parseFloat(totalPriceCell.textContent.replace(/[^0-9.]/g, ''));
-                var note = noteCell.textContent.trim().toLowerCase();
-
-                if (
-                    orderId.indexOf(input) > -1 ||
-                    customerName.indexOf(input) > -1 ||
-                    phoneNumber.indexOf(input) > -1 ||
-                    totalPrice.toString().indexOf(input) > -1 ||
-                    note.indexOf(input) > -1
-                ) {
-                    rows[i].style.display = "";
-                    found = true;
-                } else {
-                    rows[i].style.display = "none";
-                }
-            }
-        }
-
-        if (!found) {
-            Array.from(rows).forEach(function (row) {
-                row.style.display = ""; // Hiển thị lại tất cả các dòng
-            });
-
-            Swal.fire({
-                icon: 'warning',
-                title: 'Không tìm thấy',
-                showConfirmButton: false,
-                timer: 1500
-            });
-        }
-    }
-</script>
-
-<!--TÌM KIẾM THEO NGÀY-->
-<script th:inline="javascript">
-    function searchByCreationDate() {
-        var inputDate = document.getElementById("search-input-date-allHD").value;
-        var table = document.getElementById("user-table-allHD");
-        var rows = table.getElementsByTagName("tr");
-
-        for (var i = 0; i < rows.length; i++) {
-            var creationDateCell = rows[i].getElementsByTagName("td")[3]; // Điều chỉnh chỉ mục nếu cần thiết
-
-            if (creationDateCell) {
-                var creationDate = creationDateCell.innerText;
-                var formattedCreationDate = formatDate(creationDate);
-                console.log(formattedCreationDate);
-
-                if (formattedCreationDate === inputDate) {
-                    rows[i].style.display = "";
-                } else {
-                    rows[i].style.display = "none";
-                }
-            }
-        }
-    }
-
-    function formatDate(dateString) {
-        var parts = dateString.split("/");
-        var day = parts[0];
-        var month = parts[1];
-        var year = parts[2];
-        return year + "-" + month + "-" + day;
-    }
-</script>
-
-<!--TÌM KIẾM THEO TRẠNG THÁI-->
-<script th:inline="javascript">
-    // Lắng nghe sự kiện khi người dùng thay đổi giá trị của menu dropdown
-    $(document).ready(function () {
-        $('#filterStatus').on('change', function () {
-            var selectedStatus = $(this).val();
-            $('table#user-table-allHD tbody tr').each(function () {
-                var rowStatus = $(this).find('td:eq(6)').text(); // Lấy giá trị trạng thái từ cột thứ 8 (index 7)
-                if (selectedStatus === '' || rowStatus === selectedStatus) {
-                    $(this).show();
-                } else {
-                    $(this).hide();
-                }
-            });
-        });
-    });
-</script>
 
 
 
