--- a/src/main/resources/templates/admin/layouts/index.html
+++ b/src/main/resources/templates/admin/layouts/index.html
@@ -10,6 +10,8 @@
     <title>SB Admin 2 - Tables</title>
 
     <!-- Custom fonts for this template -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
     <link th:href="@{/admin/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
     <link
@@ -56,6 +58,44 @@
     <link th:href="@{/admin/css/sb-admin-2.min.css}" rel="stylesheet">
     <link th:href="@{/admin/css/sweet-alert.min.css}" rel="stylesheet">
     <link th:href="@{/admin/css/khachhang/style.css}" rel="stylesheet">
+    <!-- Custom fonts for this template-->
+    <link th:href="@{/admin/css/all.min.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/admin/css/fonts-googleapis.css}">
+
+    <!-- Custom styles for this template-->
+    <link th:href="@{/admin/css/sb-admin-2.min.css}" rel="stylesheet">
+    <link th:href="@{/admin/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+    <script th:src="@{/admin/js/jquery.min.js}"></script>
+    <script th:src="@{/admin/js/bootstrap.bundle.min.js}"></script>
+
+    <!-- Core plugin JavaScript-->
+    <script th:src="@{/admin/js/jquery.easing.min.js}"></script>
+
+    <!-- Custom scripts for all pages-->
+    <script th:src="@{/admin/js/sb-admin-2.min.js}"></script>
+
+    <script th:src="@{/admin/vendor/datatables/jquery.dataTables.min.js}"></script>
+    <script th:src="@{/admin/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
+
+    <!-- Page level custom scripts -->
+    <script th:src="@{/admin/js/demo/datatables-demo.js}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Bao gồm thư viện jQuery UI -->
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+
+    <!-- CSS của jQuery UI (nếu cần) -->
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
+    <!-- Thư viện SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body id="page-top">
 
@@ -104,7 +144,7 @@
 <script th:src="@{/admin/js/jquery.validation.min.js}"></script>
 	
 	<script th:src="@{/admin/js/product/product.js}"></script>
-    <script th:src="@{/admin/js/hoaDon/HoaDon.js}"></script>
+    <script th:src="@{/admin/js/hoadon/TrangThaiHoaDon/CTChoXacNhan.js}"></script>
 	<script th:src="@{/admin/js/khuyenmai/khuyenmai.js}"></script>
 	<script th:src="@{/admin/js/khachhang/khachHang.js}"></script>
 	<script th:src="@{/admin/js/diachi/diaChi.js}"></script>
