--- a/src/main/resources/templates/admin/banHang/banHangTaiQuay/BanHang.html
+++ b/src/main/resources/templates/admin/banHang/banHangTaiQuay/BanHang.html
@@ -8,18 +8,10 @@
 
 <body>
 <div class="container" layout:fragment="content">
-
+    <div th:object="${hoaDon}">
+        <h1 th:text="${hoaDon.maDon}"></h1>
+    </div>
 </div>
-
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
