--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DaHuy.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DaHuy.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Hủy đơn hàng</title>
     <link rel="stylesheet" th:href="@{/admin/css/hoaDon/TrangThaiHoaDon/daHuy.css}">
     <script th:src="@{/admin/js/hoadon/TrangThaiHoaDon/daHuy.js}"></script>
 </head>
