--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DangGiao.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/DangGiao.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Đang giao hàng</title>
     <link rel="stylesheet" th:href="@{/admin/css/hoaDon/TrangThaiHoaDon/dangGiao.css}">
     <script th:src="@{/admin/js/hoadon/TrangThaiHoaDon/dangGiao.js}"></script>
 </head>
