--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/TatcaDon.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/TatcaDon.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Tất cả đơn</title>
     <link rel="stylesheet" th:href="@{/admin/css/hoaDon/TrangThaiHoaDon/tatCaDon.css}">
     <script th:src="@{/admin/js/hoadon/TrangThaiHoaDon/tatCaDon.js}"></script>
 </head>
