--- a/src/main/resources/templates/admin/hoadon/ChiTiethoaDon/CTChoXacNhan.html
+++ b/src/main/resources/templates/admin/hoadon/ChiTiethoaDon/CTChoXacNhan.html
@@ -4,8 +4,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Chi tiết hóa đơn</title>
     <link rel="stylesheet" th:href="@{/admin/css/hoaDon/chiTietHoaDon/chiTietHoaDon.css}">
-    <script th:src="@{/admin/js/hoadon/chiTietHoaDon/CTChoXacNhan.js}"></script>
+    <script th:src="@{/admin/js/hoadon/ChiTietHoaDon/CTChoXacNhan.js}"></script>
 </head>
 <body>
 <div class="container" layout:fragment="content">
