--- a/src/main/resources/templates/admin/hoadon/ChiTiethoaDon/CTDangGiaoHang.html
+++ b/src/main/resources/templates/admin/hoadon/ChiTiethoaDon/CTDangGiaoHang.html
@@ -4,8 +4,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Chi tiết hóa đơn</title>
     <link rel="stylesheet" th:href="@{/admin/css/hoaDon/chiTietHoaDon/chiTietHoaDon.css}">
-    <script th:src="@{/admin/js/hoadon/chiTietHoaDon/CTDangGiao.js}"></script>
+    <script th:src="@{/admin/js/hoadon/ChiTietHoaDon/CTDangGiao.js}"></script>
 </head>
 
 <body>
