--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoGiaoHang.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoGiaoHang.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Chờ giao hàng</title>
     <link rel="stylesheet" th:href="@{/admin/css/hoaDon/TrangThaiHoaDon/choGiaoHang.css}">
     <script th:src="@{/admin/js/hoadon/TrangThaiHoaDon/choGiaoHang.js}"></script>
 </head>
