--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoXacNhan.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoXacNhan.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Chờ xác nhận</title>
     <link rel="stylesheet" th:href="@{/admin/css/hoaDon/TrangThaiHoaDon/choXacNhan.css}">
     <script th:src="@{/admin/js/hoadon/TrangThaiHoaDon/choXacNhan.js}"></script>
 </head>
